--- a/styles/choose-us.css
+++ b/styles/choose-us.css
@@ -4,7 +4,7 @@
 }
 
 .choose-us{
-  padding: 40px;
+  padding: 40px 40px 250px 40px;
   text-align: center;
   display: grid;
   gap: 60px;
@@ -20,4 +20,10 @@
 
 .reason p{
   max-width: 260px;
+}
+
+.choose-us-header{
+  display: grid;
+  flex-direction: column;
+  gap: 20px;
 }
