--- a/styles/process.css
+++ b/styles/process.css
@@ -21,8 +21,8 @@
 
 .process{
   padding: 20px;
-  width: 200px;
-  height: 180px;
+  width: 240px;
+  height: 220px;
   text-align: left;
   display: flex;
   flex-direction: column;
@@ -31,10 +31,17 @@
   border-radius: 10px;
   background-color: #124a9d13;
   position: relative;
+  z-index: 1;
+  justify-content: center;
+}
+
+.process h3{
+  font-size: 22px;
 }
 
 .process p{
   text-align: left;
+  font-size: 16px;
 }
 
 .num{
@@ -46,19 +53,19 @@
 .timeline {
   position: absolute;
   left: 50%;
-  top: 172px;
-  bottom: 300px;
+  top: 182px;
+  bottom: 200px;
   width: 1px;
 
   display: block;
-  height: 880px;
+  height: 1046px;
   background-color: #40fefe32;
 }
 
 .process::before{
   content: "";
   position: absolute;
-  top: 48px;              /* aligns with your number */
+  top: 60px;              /* aligns with your number */
   left: 50%;
   width: 6px;
   height: 6px;
