--- a/styles/about.css
+++ b/styles/about.css
@@ -10,7 +10,7 @@
 
 h2{
   color: white;
-  font-size: 26px;
+  font-size: 30px;
   font-weight: 600;
 }
 
@@ -22,7 +22,7 @@ h2{
 }
 
 .about-container span{
-  color: #55FCD5;
+  color: #40FEFE;
 }
 
 .service p{
