--- a/styles/about.css
+++ b/styles/about.css
@@ -15,7 +15,7 @@ h2{
 }
 
 .about-container p{
-  font-size: 14px;
+  font-size: 16px;
   max-width: 350px;
   text-align: center;
   color: #ACACAC;
@@ -25,6 +25,16 @@ h2{
   color: #40FEFE;
 }
 
-.service p{
-  font-size: 12px;
+/* Start state (before it scrolls into view) */
+.reveal {
+  opacity: 0;
+  transform: translatex(-30px);
+  transition: opacity 1000ms ease, transform 1000ms ease;
+  will-change: opacity, transform;
+}
+
+/* End state (when visible) */
+.reveal.is-visible {
+  opacity: 1;
+  transform: translateY(0);
 }
